# ag-ui

./: CONTRIBUTING.md  README.md
.github/: CODEOWNERS
docs/: .gitignore  LICENSE  README.md  docs.json  integrations.mdx  introduction.mdx  package.json  pnpm-lock.yaml
docs/concepts/: agents.mdx  architecture.mdx  events.mdx  mcp-os.mdx  messages.mdx  tools.mdx
docs/development/: contributing.mdx  roadmap.mdx
docs/quickstart/: applications.mdx  build.mdx  connect.mdx  middleware.mdx  server.mdx
docs/snippets/: snippet-intro.mdx
docs/tutorials/: debugging.mdx  mcp-os-quickstart.mdx  smithery-cli.mdx
dojo/: package.json  pnpm-lock.yaml
dojo/src/: config.ts  custom-agent.ts
dojo/src/examples/: stochastic-parrot.ts  your-custom-agent.ts  your-custom-http-agent.ts
python-sdk/: .gitignore  README.md  pyproject.toml
python-sdk/ag_ui/core/: __init__.py  events.py  types.py
python-sdk/examples/: mcp_shell.py
python-sdk/tests/: test_encoder.py  test_events.py  test_types.py
typescript-sdk/: .gitignore  .prettierrc  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  turbo.json
typescript-sdk/.cursor/rules/: project-rules.mdc
typescript-sdk/apps/dojo/: README.md  package.json  pnpm-lock.yaml
typescript-sdk/examples/: mcp-shell.ts
typescript-sdk/integrations/agno/: jest.config.js  package.json
typescript-sdk/integrations/langgraph/: .npmignore  package.json
typescript-sdk/integrations/server-starter/server/python/: pyproject.toml
typescript-sdk/integrations/server-starter/server/python/example_server/: __init__.py
(+107 files in other folders)
